--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
+    "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
